# geometry

./: .clang-format  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  Jamfile.v2  Jamroot  README.md  build.jam  circle.yml  index.html
test/: CMakeLists.txt  Jamfile  Jamfile.v2  boost.vsprops  compile_test.cpp  compile_test.sln  compile_test.vcproj  count_set.hpp  custom_tests.sln  geometry_index_test_common.hpp  geometry_test_common.hpp  ggl_headers.sln  ggl_headers.vcproj  static_vector.cpp  string_from_type.hpp  to_svg.hpp  ttmath.vsprops
test/algorithms/: CMakeLists.txt  Jamfile  Jamfile.v2  algorithms_tests.sln  append.cpp  append.vcproj  area.cpp  area.vcproj  assign.cpp  assign.vcproj  azimuth.cpp  buffer.cpp  buffer.vcproj  centroid.cpp  centroid.vcproj  centroid_multi.cpp  check_validity.hpp  combine.cpp  combine.vcproj  comparable_distance.cpp  comparable_distance.vcproj  comparable_distance_variant.cpp  complexify.cpp  content.cpp  convert.cpp  convert.vcproj  convex_hull.cpp  convex_hull.vcproj  correct.cpp  correct.vcproj  covered_by.cpp  crosses.cpp  densify.cpp  difference.cpp  difference.vcproj  difference1.cpp  difference_linear_linear.cpp  difference_pl_pl.cpp  disjoint.cpp  disjoint.vcproj  (+144 more)
test/arithmetic/: CMakeLists.txt  Jamfile  Jamfile.v2  arithmetic.cpp  arithmetic.vcproj  arithmetic_tests.sln  cross_product.cpp  cross_product.vcproj  dot_product.cpp  dot_product.vcproj  general_form.cpp  infinite_line_functions.cpp
test/concepts/: CMakeLists.txt  Jamfile  Jamfile.v2  linestring_concept.cpp  point_concept_checker.cpp  point_well_formed_traits.cpp  point_with_incorrect_dimension.cpp  point_without_coordinate_type.cpp  point_without_dimension.cpp  point_without_getter.cpp  point_without_setter.cpp
test/core/: CMakeLists.txt  Jamfile  Jamfile.v2  access.cpp  access.vcproj  assert.cpp  coordinate_dimension.cpp  coordinate_system.cpp  coordinate_type.cpp  core.sln  geometry_id.cpp  point_iterator.cpp  point_type.cpp  radian_access.cpp  radian_access.vcproj  radius.cpp  reverse_dispatch.cpp  reverse_dispatch.vcproj  ring.cpp  tag.cpp  topological_dimension.cpp  visit.cpp
test/cs_undefined/: CMakeLists.txt  Jamfile  Jamfile.v2  index.cpp  other.cpp  relops.cpp
test/domains/: Jamfile.v2
test/extensions/: Jamfile.v2
test/formulas/: CMakeLists.txt  Jamfile  Jamfile.v2  direct.cpp  direct_cases.hpp  direct_cases_antipodal.hpp  direct_meridian.cpp  direct_meridian_cases.hpp  intersection.cpp  intersection_cases.hpp  inverse.cpp  inverse_cases.hpp  inverse_karney.cpp  inverse_short_distance.cpp  test_formula.hpp  vertex_longitude.cpp  vertex_longitude_cases.hpp
test/geometries/: CMakeLists.txt  Jamfile  Jamfile.v2  adapted.cpp  boost_array_as_point.cpp  boost_fusion.cpp  boost_polygon.cpp  boost_polygon.vcproj  boost_polygon_overlay.cpp  boost_range.cpp  boost_tuple.cpp  boost_tuple_cartesian.cpp  boost_tuple_geographic.cpp  box.cpp  box.vcproj  custom_linestring.cpp  custom_linestring.vcproj  geometries.cpp  geometries_tests.sln  infinite_line.cpp  initialization.cpp  linestring.cpp  multi_linestring.cpp  multi_point.cpp  multi_polygon.cpp  point.cpp  point_xy.cpp  point_xyz.cpp  polygon.cpp  polyhedral_surface.cpp  polyhedral_surface_fail.cpp  ring.cpp  segment.cpp  segment.vcproj
test/headers/: Jamfile
test/index/: Jamfile.v2  geometry_index_test_common.hpp
test/io/: CMakeLists.txt  Jamfile
test/iterators/: CMakeLists.txt  Jamfile  Jamfile.v2  box_iterator.cpp  box_iterator.vcproj  circular_iterator.cpp  circular_iterator.vcproj  closing_iterator.cpp  concatenate_iterator.cpp  ever_circling_iterator.cpp  ever_circling_iterator.vcproj  flatten_iterator.cpp  iterators.sln  point_iterator.cpp  segment_iterator.cpp  segment_iterator.vcproj  segment_range_iterator.cpp  segment_range_iterator.vcproj  segment_returning_iterator.cpp  segment_returning_iterator.vcproj  test_iterator_common.hpp
test/multi/: Jamfile.v2  multi_tests.sln
test/point_concept/: Jamfile.v2  array_point.cpp  concept_checker.cpp  function_asserting_a_point.hpp  function_requiring_a_point.hpp  geographic_custom_point_with_wrong_units.cpp  point_with_incorrect_dimension.cpp  point_without_coordinate_type.cpp  point_without_dimension.cpp  point_without_getter.cpp  point_without_setter.cpp  spherical_equatorial_custom_point_with_wrong_units.cpp  well_formed_point.cpp  well_formed_point_traits.cpp
test/policies/: CMakeLists.txt  Jamfile  Jamfile.v2  compare.cpp  compare.vcproj  rescale_policy.cpp
test/ranges/: Jamfile.v2  box_range.cpp  box_range.vcproj  ranges.sln  segment_range.cpp  segment_range.vcproj
test/robustness/: CMakeLists.txt
test/rtree/: Jamfile.v2  rtree.cpp  rtree2d.cpp  rtree2d_linear.cpp  rtree2d_linear_d.cpp  rtree2d_linear_d_rt.cpp  rtree2d_linear_f.cpp  rtree2d_linear_f_rt.cpp  rtree2d_linear_i.cpp  rtree2d_linear_i_rt.cpp  rtree2d_linear_tt.cpp  rtree2d_linear_tt_rt.cpp  rtree2d_quadratic.cpp  rtree2d_quadratic_d.cpp  rtree2d_quadratic_d_rt.cpp  rtree2d_quadratic_f.cpp  rtree2d_quadratic_f_rt.cpp  rtree2d_quadratic_i.cpp  rtree2d_quadratic_i_rt.cpp  rtree2d_quadratic_tt.cpp  rtree2d_quadratic_tt_rt.cpp  rtree2d_rstar.cpp  rtree2d_rstar_d.cpp  rtree2d_rstar_d_rt.cpp  rtree2d_rstar_f.cpp  rtree2d_rstar_f_rt.cpp  rtree2d_rstar_i.cpp  rtree2d_rstar_i_rt.cpp  rtree2d_rstar_tt.cpp  rtree2d_rstar_tt_rt.cpp  rtree3d.cpp  rtree3d_linear.cpp  rtree3d_linear_d.cpp  rtree3d_linear_d_rt.cpp  rtree3d_linear_f.cpp  rtree3d_linear_f_rt.cpp  rtree3d_linear_i.cpp  rtree3d_linear_i_rt.cpp  rtree3d_linear_tt.cpp  rtree3d_linear_tt_rt.cpp  (+24 more)
test/self_contained_headers/: Jamfile
test/srs/: CMakeLists.txt  Jamfile  Jamfile.v2  par4.cpp  proj4.hpp  project_transformer.cpp  projection.cpp  projection_epsg.cpp  projection_interface.cpp  projection_selftest.cpp  projection_selftest_cases.hpp  projections.cpp  projections_combined.cpp  projections_static.cpp  srs_transformer.cpp  transformation_interface.cpp
test/strategies/: CMakeLists.txt  Jamfile  Jamfile.v2  andoyer.cpp  cross_track.cpp  cross_track.vcproj  distance.cpp  distance_cross_track.cpp  douglas_peucker.cpp  (+30 more)
(+4725 files in other folders)
